arete-macros/tests/ui/validation_errors/invalid_skip_decoders_assignment.rs
use arete_macros::arete;

#[arete(skip_decoders = true)]
mod broken {}

fn main() {}
